Get rid of kineticjs since it violates CSP by three warnings. Furthermore by dropping kineticjs I don't have to deal with 88kb obfuscated or 429kb overhead of library code in this case. Plus there has been a buggy behavior of kineticjs on desktop but running fine on mobile device. Complete rewrite of the main part of the game.

--- a/src/css/gameboard.css
+++ b/src/css/gameboard.css
@@ -1,3 +1,3 @@
 
 body { margin: 5px; padding: 5px; font-size: 7mm; }
-div#container { margin-top:5px; }
+canvas { margin-top:5px; }
